--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
 
 p {
   display: block;
+  border: 1px solid yellow;
   width: 300px;
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
