--- a/styles.css
+++ b/styles.css
@@ -15,4 +15,5 @@ p {
   width: 300px;
   margin: 50px auto;
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+  border: 1px dashed red;
 }
